<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="24dp"
    tools:context=".SignUpFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_title"
        android:textSize="36sp"
        android:textStyle="bold"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:id="@+id/username_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username_box"
        android:inputType="text"
        android:autofillHints="username" />
    <!-- May need to not use the same buttons as login page (username and password)-->

    <EditText
        android:id="@+id/name_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name_box"
        android:inputType="text"
        android:autofillHints="name" />

    <EditText
        android:id="@+id/password_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_box"
        android:inputType="textPassword"
        android:autofillHints="password"
        android:layout_marginBottom="10sp"/>

    <Button
        android:id="@+id/sign_up_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_title"
        android:textSize="20sp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_text"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/login_nav_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_title"
            android:textSize="16sp"
            android:textStyle="bold"
            android:paddingStart="8dp"
            android:paddingEnd="0dp"
            android:textColor="?attr/colorPrimary"
            android:clickable="true"
            android:focusable="true"/>

    </LinearLayout>


</LinearLayout>