<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="24dp"
    tools:context=".ui.FocusSelectionFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/focus_session_title"
        android:textSize="32sp"
        android:textStyle="bold"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pick_focus_method"
        android:textSize="20sp"
        android:layout_marginBottom="32dp" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/classic_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:focusable="true"
        android:padding="16dp"
        app:cardBackgroundColor="?attr/colorPrimary">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/classic_method"
                android:textSize="22sp"
                android:textStyle="bold"
                android:textColor="?attr/colorOnPrimary" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/classic_description"
                android:textSize="14sp"
                android:layout_marginBottom="8dp"
                android:textColor="?attr/colorOnPrimary" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/pomodoro_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:focusable="true"
        android:padding="16dp"
        app:cardBackgroundColor="?attr/colorPrimary">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pomodoro_method"
                android:textSize="22sp"
                android:textStyle="bold"
                android:textColor="?attr/colorOnPrimary" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pomodoro_description"
                android:textSize="14sp"
                android:textAlignment="center"
                android:layout_marginBottom="8dp"
                android:textColor="?attr/colorOnPrimary" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/flowmodoro_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:focusable="true"
        android:padding="16dp"
        app:cardBackgroundColor="?attr/colorPrimary">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/flowmodoro_method"
                android:textSize="22sp"
                android:textStyle="bold"
                android:textColor="?attr/colorOnPrimary"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/flowmodoro_description"
                android:textSize="14sp"
                android:textAlignment="center"
                android:layout_marginBottom="8dp"
                android:textColor="?attr/colorOnPrimary"/>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>